[package]
name = "shared_hashmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
bincode = "1.3.3"
hashbrown = { version = "0.13.2", features = ["ahash"] }
raw_sync = "0.1.5"
serde = "1.0.164"
shared_memory = "0.12.4"

[lib]
name = "shared_hashmap"
path = "src/main.rs"
