[package]
name = "shared_hashmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
raw_sync = "0.1.5"
serde = "1.0.164"
shared_memory = "0.12.4"

[dev-dependencies]
nix = { version = "0.26.2", features = ["process"] }

[lib]
name = "shared_hashmap"
path = "src/lib.rs"
